--- a/mifosng-android/src/main/res/drawable-xhdpi/fingerprint_button_rounded.xml
+++ b/mifosng-android/src/main/res/drawable-xhdpi/fingerprint_button_rounded.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/red_app"/>
+    <solid android:color="@color/red_light_app"/>
 
     <corners
       android:radius="10dp"/>
