--- a/mifosng-android/src/main/res/layout/activity_splash.xml
+++ b/mifosng-android/src/main/res/layout/activity_splash.xml
@@ -1,9 +1,23 @@
-<!--
-  ~ This project is licensed under the open source MPL V2.
-  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
-  -->
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_gravity="center"
+    android:layout_height="match_parent"
+    android:background="@color/primary"
+    tools:context=".SplashScreenActivity">
 
-<FrameLayout xmlns:tools="http://schemas.android.com/tools"
-    style="@style/FrameLayout.Container"
-    tools:context=".SplashScreenActivity"
-    tools:ignore="MergeRootFrame" />
+    <ImageView
+        android:id="@+id/iv_splash_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:padding="100dp"
+        android:src="@drawable/app_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
