--- a/mifosng-android/src/main/res/layout/fragment_client_details.xml
+++ b/mifosng-android/src/main/res/layout/fragment_client_details.xml
@@ -1,128 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_client"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/default_padding"
-    android:layout_marginEnd="@dimen/default_padding"
-    android:id="@+id/rl_client">
+    android:layout_marginEnd="@dimen/default_padding">
 
     <ScrollView style="@style/ScrollView.Base">
 
         <LinearLayout style="@style/LinearLayout.Base">
 
-            <LinearLayout style="@style/LinearLayout.Width"
-                android:orientation="vertical">
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/cv_client"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:cardCornerRadius="15dp"
+                app:cardUseCompatPadding="true">
 
-                <FrameLayout
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_marginTop="@dimen/marginItemsInSectionSmall"
-                    android:layout_gravity="center">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="20dp">
 
-                    <com.mifos.mifosxdroid.views.CircularImageView
-                        android:id="@+id/iv_clientImage"
-                        style="@style/ClientImage"
-                        android:layout_gravity="center"/>
+                    <LinearLayout
+                        style="@style/LinearLayout.Width"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal">
 
-                    <ProgressBar
-                        android:id="@+id/pb_imageProgressBar"
-                        style="@style/ProgressBar.Base"
-                        android:layout_gravity="center"/>
+                        <FrameLayout
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_gravity="center">
 
-                </FrameLayout>
+                            <com.mifos.mifosxdroid.views.CircularImageView
+                                android:id="@+id/iv_clientImage"
+                                style="@style/ClientImage"
+                                android:layout_gravity="center" />
 
-                <TextView
-                    android:id="@+id/tv_fullName"
-                    style="@style/TextView.Client"
-                    android:layout_marginBottom="@dimen/marginItemsInSectionSmall"
-                    android:layout_marginTop="@dimen/marginItemsInSectionSmall"
-                    android:layout_gravity="center"/>
+                            <ProgressBar
+                                android:id="@+id/pb_imageProgressBar"
+                                style="@style/ProgressBar.Base"
+                                android:layout_gravity="center" />
 
-            </LinearLayout>
+                        </FrameLayout>
 
+                        <TextView
+                            android:id="@+id/tv_fullName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/marginItemsInSectionSmall"
+                            android:layout_marginBottom="@dimen/marginItemsInSectionSmall"
+                            android:padding="10dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/account_number" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/external_id" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:id="@+id/tv_accountNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="123"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_externalId"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="123"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/activation_date" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/office" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:id="@+id/tv_activationDate"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="123"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_office"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="123"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/group" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal">
+
+
+                        <TextView
+                            android:id="@+id/tv_group"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="123"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <TableLayout
                 android:id="@+id/tbl_clientDetails"
-                style="@style/Table">
-
-                <TableRow
-                    android:id="@+id/row_account"
-                    style="@style/TableRow">
-
-                    <TextView
-                        style="@style/TextView.Row"
-                        android:text="@string/account_number"/>
-
-                    <TextView
-                        android:id="@+id/tv_accountNumber"
-                        style="@style/TextView.Row.Value"/>
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/row_external"
-                    style="@style/TableRow">
-
-                    <TextView
-                        style="@style/TextView.Row"
-                        android:text="@string/external_id"/>
-
-                    <TextView
-                        android:id="@+id/tv_externalId"
-                        style="@style/TextView.Row.Value"/>
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/row_activation"
-                    style="@style/TableRow">
-
-                    <TextView
-                        style="@style/TextView.Row"
-                        android:text="@string/activation_date"/>
-
-                    <TextView
-                        android:id="@+id/tv_activationDate"
-                        style="@style/TextView.Row.Value"/>
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/row_office"
-                    style="@style/TableRow">
-
-                    <TextView
-                        style="@style/TextView.Row"
-                        android:text="@string/office"/>
-
-                    <TextView
-                        android:id="@+id/tv_office"
-                        style="@style/TextView.Row.Value"/>
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow_mobile_no"
-                    style="@style/TableRow">
-
-                    <TextView
-                        style="@style/TextView.Row"
-                        android:text="@string/mobile_no"/>
-
-                    <TextView
-                        android:id="@+id/tv_mobile_no"
-                        style="@style/TextView.Row.Value"/>
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/row_group"
-                    style="@style/TableRow">
-
-                    <TextView
-                        style="@style/TextView.Row"
-                        android:text="@string/group"/>
-
-                    <TextView
-                        android:id="@+id/tv_group"
-                        style="@style/TextView.Row.Value"/>
-                </TableRow>
+                style="@style/Table"
+                android:visibility="gone">
 
                 <TableRow
                     android:id="@+id/row_staff"
@@ -131,13 +199,13 @@
 
                     <TextView
                         style="@style/TextView.Row"
-                        android:text="@string/staff"/>
+                        android:text="@string/staff" />
 
                     <TextView
                         android:id="@+id/tv_loanOfficer"
                         style="@style/TextView.Row"
                         android:gravity="right"
-                        android:text=""/>
+                        android:text="" />
                 </TableRow>
 
                 <TableRow
@@ -147,13 +215,13 @@
 
                     <TextView
                         style="@style/TextView.Row"
-                        android:text="@string/loan_cycle"/>
+                        android:text="@string/loan_cycle" />
 
                     <TextView
                         android:id="@+id/tv_loanCycle"
                         style="@style/TextView.Row"
                         android:gravity="right"
-                        android:text=""/>
+                        android:text="" />
                 </TableRow>
 
             </TableLayout>
@@ -163,19 +231,19 @@
                 layout="@layout/view_account_accordion_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp" />
 
             <include
                 android:id="@+id/account_accordion_section_savings"
                 layout="@layout/view_account_accordion_section"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <include
                 android:id="@+id/account_accordion_section_recurring"
                 layout="@layout/view_account_accordion_section"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
     </ScrollView>
@@ -185,15 +253,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
-       <Button
-           android:id="@+id/btn_activate_client"
-           android:layout_width="match_parent"
-           android:layout_height="50dp"
-           android:text="@string/activate_client"
-           android:background="@color/accent" />
+        <Button
+            android:id="@+id/btn_activate_client"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/accent"
+            android:text="@string/activate_client" />
     </LinearLayout>
 
 </RelativeLayout>
