--- a/mifosng-android/src/main/res/values/styles.xml
+++ b/mifosng-android/src/main/res/values/styles.xml
@@ -11,22 +11,22 @@
     </style>
 
     <style name="MaterialAppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorAccent">@color/accent</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorButtonNormal">@color/primary</item>
+        <item name="colorAccent">@color/gray_dark</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorButtonNormal">@color/red_app</item>
         <item name="android:buttonStyle">@style/AppTheme.Button</item>
         <item name="buttonStyle">@style/AppTheme.Button</item>
         <item name="android:textViewStyle">@style/AppTheme.Text</item>
         <item name="windowActionModeOverlay">true</item>
-        <item name="android:windowBackground">@color/white</item>
+        <item name="android:windowBackground">@color/primary</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
     <style name="TraslucentActionBarTheme" parent="MaterialAppTheme">
     </style>
 
     <style name="Widget.ActionMode" parent="Widget.AppCompat.ActionMode">
-        <item name="background">@color/primary_dark</item>
+        <item name="background">@color/blue_light</item>
         <item name="titleTextStyle">@style/AppTheme.Text</item>
 
     </style>
@@ -37,8 +37,8 @@
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
-        <item name="colorControlNormal">@android:color/white</item>
-        <item name="color">@android:color/white</item>
+        <item name="colorControlNormal">@android:color/black</item>
+        <item name="color">@android:color/black</item>
     </style>
 
     <style name="AppTheme.Button" parent="Widget.AppCompat.Button">
@@ -52,7 +52,7 @@
     </style>
 
     <style name="MaterialAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/primary</item>
+        <item name="colorAccent">@color/black</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:background">@color/white</item>
     </style>
@@ -84,10 +84,6 @@
 
     <style name="MaterialDatePickerTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/primary</item>
-    </style>
-
-    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/background</item>
     </style>
 
     <style name="badge_style">
