--- a/mifosng-android/src/main/res/values/styles_toolbar.xml
+++ b/mifosng-android/src/main/res/values/styles_toolbar.xml
@@ -10,8 +10,8 @@
 
     <style name="Toolbar.Common">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:background">@color/primary</item>
         <item name="actionModeBackground">@color/primary</item>
