--- a/mifosng-android/src/main/res/values/colors.xml
+++ b/mifosng-android/src/main/res/values/colors.xml
@@ -78,6 +78,7 @@
         <item>@color/orange_light</item>
     </array>
 
+    <color name="gray_btn_bg_color">#D0D0D0</color>
     <color name="cardview_login_hints">#BCBCBC</color>
 
 </resources>
