--- a/mifosng-android/src/main/res/layout/row_group_name.xml
+++ b/mifosng-android/src/main/res/layout/row_group_name.xml
@@ -4,27 +4,23 @@
   ~ This project is licensed under the open source MPL V2.
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardUseCompatPadding="true" >
+    app:cardCornerRadius="10dp"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
         android:minHeight="?attr/listPreferredItemHeight"
         android:orientation="horizontal"
-        android:backgroundTint="@color/white"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:id="@+id/linearLayout">
+        android:paddingRight="16dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -43,7 +39,7 @@
                 android:lines="1"
                 android:text="@string/medium_text"
                 android:textColor="@color/black"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
 
             <TextView
@@ -52,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/small_text"
                 android:textColor="@color/gray_dark"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -62,8 +58,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            app:srcCompat="@drawable/ic_done_all_black_24dp"
-            />
+            app:srcCompat="@drawable/ic_done_all_black_24dp" />
 
     </LinearLayout>
 
