--- a/mifosng-android/src/main/res/layout/row_account_item.xml
+++ b/mifosng-android/src/main/res/layout/row_account_item.xml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--
-  ~ This project is licensed under the open source MPL V2.
-  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
-  -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:padding="8dp">
+    android:background="@color/white"
+    android:orientation="horizontal"
+    android:paddingBottom="10dp">
 
-    <View
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/gray_light"
+        android:orientation="vertical"
+        android:padding="12dp">
+
+        <TextView
+            android:id="@+id/tv_accountNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="123123123"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_amount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="123123123"
+            android:textColor="@color/black" />
+
+
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/view_status_indicator"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/light_red" />
-
-    <TextView
-        android:id="@+id/tv_accountNumber"
-        style="@style/TextView.Base.Weight"
-        android:layout_weight="1"
-        android:padding="@dimen/text_padding_normal"
-        android:textColor="@color/primary_text"
-        android:text="@string/medium_text" />
-
-    <TextView
-        android:id="@+id/tv_amount"
-        style="@style/TextView.Base.Weight"
-        android:layout_weight="1"
-        android:gravity="right"
-        android:padding="@dimen/text_padding_normal"
-        android:textColor="@color/primary_text"
-        android:text="@string/medium_text" />
+        android:layout_width="7dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/round_corner" />
 </LinearLayout>
